--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -12,15 +12,6 @@
         "title": "403",
         "description": "Извините, вы не авторизованы для доступа к этой странице."
     },
-    "changePasswordForm": {
-        "changePassword": "Изменить пароль",
-        "successfullySaved": "Пароль успешно сохранён"
-    },
-    "tables": {
-        "actions": "Действия",
-        "resetParams": "Сбросить параметры",
-        "pageNavigation": "Страница из страниц"
-    },
     "forms": {
         "id": "ID",
         "uuid": "UUID",
@@ -44,7 +35,8 @@
         "assign": "Назначить",
         "find": "Найти",
         "clear": "Очистить",
-        "move": "Переместить"
+        "move": "Переместить",
+        "showPassword": "Показать пароль"
     },
     "errorBoundary": {
         "title": "Извините, что-то пошло не так.",
@@ -65,6 +57,5 @@
         "404": "Ресурс не найден",
         "422": "Извините! Что-то пошло не так...",
         "500": "Извините! Что-то пошло не так..."
-    },
-    "breadcrumbs": {}
+    }
 }
