Add Header, refresh token

--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -57,5 +57,8 @@
         "404": "Ресурс не найден",
         "422": "Извините! Что-то пошло не так...",
         "500": "Извините! Что-то пошло не так..."
+    },
+    "header": {
+        "signOut": "Выйти"
     }
 }
