Add Initializer, MainLoading, EmployeesListWidget

--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -50,7 +50,8 @@
     },
     "mainMenu": {
         "calendar": "Расписание",
-        "settings": "Настройки"
+        "settings": "Настройки",
+        "employee": "Сотрудники"
     },
     "errors": {
         "400": "Не правильный формат данных запроса",
