Add Table pagination

--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -61,5 +61,9 @@
     },
     "header": {
         "signOut": "Выйти"
+    },
+    "table": {
+        "fromTotal": "из",
+        "pageSizeLabel": "Строк на странице:"
     }
 }
