--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -51,7 +51,7 @@
     "mainMenu": {
         "calendar": "Расписание",
         "settings": "Настройки",
-        "employee": "Сотрудники"
+        "employees": "Сотрудники"
     },
     "errors": {
         "400": "Не правильный формат данных запроса",
