--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -19,12 +19,11 @@
         "email": "Email",
         "name": "Имя",
         "type": "Тип",
-        "ip": "IP",
         "surname": "Фамилия",
         "patronymic": "Отчество",
         "password": "Пароль",
-        "password_old": "Предыдущий пароль",
-        "password_confirmation": "Подтвердите пароль",
+        "passwordOld": "Предыдущий пароль",
+        "passwordConfirmation": "Подтвердите пароль",
         "save": "Сохранить",
         "send": "Отправить",
         "cancel": "Отменить",
