--- a/public/locales/ru/shared.json
+++ b/public/locales/ru/shared.json
@@ -12,7 +12,7 @@
         "title": "403",
         "description": "Извините, вы не авторизованы для доступа к этой странице."
     },
-    "forms": {
+    "form": {
         "id": "ID",
         "uuid": "UUID",
         "login": "Логин",
